# LangChain

./: .env  README.md  TRANSLATOR_README.md  ai_translator_bot.py  pyproject.toml  requirements.txt  run_translator.py  simple_translator.py  test_ollama.py
.cursor/rules/: my-rules.mdc
lesson1/: apple_mac_specs.md  lesson1.py  lesson1_2.ipynb  lesson2_0906.ipynb  lesson2_09061005.ipynb  python_variables_math.md  test.ipynb
lesson1_0830/: lesson1.py  lesson1_2.ipynb
lesson2_0906/: lesson2_2.ipynb  lesson2_3.ipynb  lesson2_4.ipynb  lesson2_5.py
lesson3/: lesson3.ipynb  lesson3_1.ipynb  lesson3_2.ipynb  lesson3_3_ai.ipynb
lesson4_0920/: lesson4_1.ipynb  lesson4_2.py
lesson5_0927/: README_GRADIO.md  gradio_translator.py  lesson5_6.ipynb  lesson5_7.py  requirements.txt
lesson5_1/: lesson5_1.ipynb  lesson5_2.ipynb
lesson5_1/.gradio/flagged/: dataset1.csv
lesson6_1018/: lesson6_1.ipynb  lesson6_2.ipynb  lesson6_3.ipynb  lesson6_4.ipynb  lesson6_5.ipynb  lesson6_6 (1).ipynb  lesson6_6.ipynb
lesson7/: lesson7_1.ipynb  lesson7_2.ipynb
lesson7/.ipynb_checkpoints/: lesson7_1-checkpoint.ipynb
lesson7/db/chroma_db_v3/: chroma.sqlite3
