[project]
name = "2025-08-30-chihlee-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-community>=0.3.31",
    "langchain-huggingface",
    "python-dotenv>=1.1.1",
    "gradio>=5.46.1",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "langchain>=0.3.27",
    "ipykernel>=6.30.1",
    "onnxruntime>=1.16.0<1.23.0",
    "chromadb>=1.2.1",
    "langchain-chroma>=0.2.6",
    "sentence-transformers",
]

